RESOLVED FIXED117235
[BlackBerry] Test editing/execCommand/indent-paragraphs.html times out
https://bugs.webkit.org/show_bug.cgi?id=117235
Summary [BlackBerry] Test editing/execCommand/indent-paragraphs.html times out
Carlos Garcia Campos
Reported 2013-06-05 02:24:21 PDT
In r150224 we fixed a crash in this test due to invalid URL errors in BB platform. Now the tests doesn't crash but times out.
Attachments
Patch (2.06 KB, patch)
2013-06-05 02:29 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2013-06-05 02:29:12 PDT
Rob Buis
Comment 2 2013-06-10 08:17:41 PDT
Comment on attachment 203773 [details] Patch Looks good.
WebKit Commit Bot
Comment 3 2013-06-11 00:57:59 PDT
Comment on attachment 203773 [details] Patch Clearing flags on attachment: 203773 Committed r151426: <http://trac.webkit.org/changeset/151426>
WebKit Commit Bot
Comment 4 2013-06-11 00:58:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.